Make sure icon is aligned.

--- a/static/src/stylesheets/module/facia/_pagination.scss
+++ b/static/src/stylesheets/module/facia/_pagination.scss
@@ -42,13 +42,14 @@ The user needs to view a subset of sorted data that is not easily displayed on o
 */
 
 $pagination-item-size: 24px;
-$pagination-height: 48px;
-$pagination-gutter: ($pagination-height - $pagination-item-size) / 2;
+$pagination-height:    48px;
+$pagination-gutter:    ($pagination-height - $pagination-item-size) / 2;
+$text-size:            14px;
 
 .pagination {
     text-align: right;
     @include f-textSans;
-    @include font-size(14px, 48px);
+    @include font-size($text-size, 48px);
     border-top: 1px solid $c-neutral5;
 
     @include mq(leftCol) {
@@ -121,7 +122,9 @@ $pagination-gutter: ($pagination-height - $pagination-item-size) / 2;
     text-align: center;
 
     i {
-        vertical-align: text-top;
+        height: $text-size;
+        line-height: $text-size;
+        vertical-align: middle;
     }
 
     @include mq(desktop) {
